--- a/assembling-a-prusa-3d-printer/index.html
+++ b/assembling-a-prusa-3d-printer/index.html
@@ -115,7 +115,7 @@
         <h1 class="post-full-title">Assembling a Prusa 3D Printer</h1>
     </header>
     
-    <figure class="post-full-image" style="background-image: url(https://rvhaasen.github.iodefimg/7.jpg)">
+    <figure class="post-full-image" style="background-image: url(https://rvhaasen.github.io/defimg/4.jpg)">
     </figure>
 
     <section class="post-full-content">
