--- a/rabbit-gone/index.html
+++ b/rabbit-gone/index.html
@@ -196,7 +196,7 @@ After 30 Decmber 2020 the rabbit somehow disappeared. Most likely it got sick, w
       <article class="post-card post"> 
     
     <a class="post-card-image-link" href="https://rvhaasen.github.io/assembling-a-prusa-3d-printer/">
-      <div class="post-card-image" style="background-image: url(https://rvhaasen.github.iodefimg/7.jpg)"></div>
+      <div class="post-card-image" style="background-image: url(https://rvhaasen.github.io/defimg/6.jpg)"></div>
     </a>    
     
 
